--- a/baselib/src/main/res/values/strings.xml
+++ b/baselib/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="confirm">确定</string>
     <string name="ignore_version">忽略当前版本</string>
     <string name="progress_tip">加载中..</string>
+    <string name="download">下载</string>
 </resources>
