一些代码规范方面的问题

--- a/widgetlib/src/main/res/values/strings.xml
+++ b/widgetlib/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="dialog_title">提示</string>
-    <string name="cancle">取消</string>
-    <string name="confirm">确定</string>
+    <string name="xwidget_dialog_title">提示</string>
+    <string name="xwidget_cancle">取消</string>
+    <string name="xwidget_confirm">确定</string>
 </resources>
